--- a/environment.yml
+++ b/environment.yml
@@ -4,15 +4,15 @@ channels:
   - mosdef
   - omnia
 dependencies:
-  - python
-  - pip
-  - numpy
-  - foyer
-  - gsd
-  - mbuild
-  - hoomd
-  - openmm
-  - signac
+  - python=3.7
+  - pip=20.2
+  - numpy=1.19
+  - foyer=0.7.6
+  - gsd=2.2.0
+  - mbuild=0.10.9
+  - hoomd=2.9.3
+  - openmm=7.4.2
+  - signac=1.5.0
   - pip:
     - pytest
     - git+https://bitbucket.org/cmelab/cme_utils.git
