--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    
     - name: Setup miniconda
-      uses: goanpeca/setup-miniconda@v1.6.0
+    - uses: actions/checkout@v2
+    - uses: conda-incubator/setup-miniconda@v1
+      # https://github.com/conda-incubator/setup-miniconda
       with:
-        # https://github.com/goanpeca/setup-miniconda
         activate-environment: planckton
         environment-file: environment.yml
         auto-activate-base: false
+    - shell: bash -l {0}
+      run: |
+        python -m pip install -e .
         
     - name: Run pytest with coverage report
       shell: bash -l {0}
