--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
 
     steps:
     - name: Setup miniconda
-    - uses: actions/checkout@v2
-    - uses: conda-incubator/setup-miniconda@v1
+      uses: actions/checkout@v2
+      uses: conda-incubator/setup-miniconda@v1
       # https://github.com/conda-incubator/setup-miniconda
       with:
         activate-environment: planckton
         environment-file: environment.yml
         auto-activate-base: false
-    - shell: bash -l {0}
+      shell: bash -l {0}
       run: |
         python -m pip install -e .
         
