--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Setup miniconda
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+   
+    - name: Setup miniconda  
       uses: conda-incubator/setup-miniconda@v1
       # https://github.com/conda-incubator/setup-miniconda
       with:
         activate-environment: planckton
         environment-file: environment.yml
         auto-activate-base: false
-      shell: bash -l {0}
+    - shell: bash -l {0}
       run: |
         python -m pip install -e .
         
