--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,25 +10,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: 
+      image: cmelab/planckton_cpu0.0.1
 
     steps:
     - uses: actions/checkout@v2
-   
-    - name: Setup miniconda  
-      uses: conda-incubator/setup-miniconda@v1
-      # https://github.com/conda-incubator/setup-miniconda
-      with:
-        activate-environment: planckton
-        environment-file: environment.yml
-        auto-activate-base: false
-    - shell: bash -l {0}
-      run: |
-        python -m pip install -e .
-        
+ 
     - name: Run pytest with coverage report
       shell: bash -l {0}
       run: |
-          python -m pip install pytest pytest-cov
+          conda activate planckton
           python -m pytest --cov=./ --cov-report=xml
           
     - name: Upload coverage to Codecov
