--- a/environment.yml
+++ b/environment.yml
@@ -19,4 +19,6 @@ dependencies:
   - unyt=2.8.0
   - pip:
     - pytest
+    - pytest-cov
     - git+https://bitbucket.org/cmelab/cme_utils.git
+    - git+https://github.com/cmelab/planckton@test-docker
