remove yml and activate correct environment

--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -40,5 +40,6 @@ COPY environment.yml /
 
 # build environment
 RUN conda env create -f environment.yml && \
-    conda init bash && \
-    /opt/conda/bin/conda clean -tipsy
+    /opt/conda/bin/conda clean -tipsy && \
+    rm /environment.yml && \
+    echo "conda activate planckton" >> ~/.bashrc
