--- a/codecov.yml
+++ b/codecov.yml
@@ -6,4 +6,8 @@ comment:
   require_head: yes       # [yes :: must have a head report to post]
   branches:               # branch names that can post comment
     - "master"
+ignore:
+  - "planckton/compounds"
+  - "planckton/forcefields"
+  - "tests"
 
