fix typo and ignore __version__.py

--- a/codecov.yml
+++ b/codecov.yml
@@ -9,5 +9,6 @@ comment:
 ignore:
     - "tests"
     - "planckton/compounds"
-    - "planckton/forcefields"
+    - "planckton/force_fields"
+    - "planckton/__version__.py"
 
