--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,7 @@ channels:
   - mosdef
   - omnia
 dependencies:
+  - openbabel
   - python=3.7
   - pip=20.2
   - numpy=1.19
@@ -17,4 +18,4 @@ dependencies:
     - pytest
     - pytest-cov
     - git+https://bitbucket.org/cmelab/cme_utils.git
-    - git+https://github.com/cmelab/planckton@test-docker
+    - git+https://github.com/cmelab/planckton@fix_setup
