--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -28,11 +28,6 @@ RUN CONDA_VERSION="4.8.3" && \
     conda config --set auto_update_conda False && \
     conda init bash
 
-# prevent python from loading packages from outside the container
-# default empty pythonpath
-ENV PYTHONPATH=/ignore/pythonpath
-# disable user site directories (https://docs.python.org/3/library/site.html#module-site)
-RUN sed -i -e 's/ENABLE_USER_SITE = None/ENABLE_USER_SITE = False/g' `python3 -c 'import site; print(site.__file__)'`
 
 # mount points for filesystems on clusters
 RUN mkdir -p /nfs \
@@ -48,3 +43,10 @@ COPY environment.yml /
 RUN conda env create -f environment.yml && \
     conda init bash && \
     /opt/conda/bin/conda clean -tipsy
+    
+# prevent python from loading packages from outside the container
+# default empty pythonpath
+ENV PYTHONPATH=/ignore/pythonpath
+# disable user site directories (https://docs.python.org/3/library/site.html#module-site)
+RUN conda activate planckton && \
+sed -i -e 's/ENABLE_USER_SITE = None/ENABLE_USER_SITE = False/g' `python3 -c 'import site; print(site.__file__)'`
