--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container: 
-      image: cmelab/planckton_cpu0.0.1
+    image: cmelab/planckton_cpu:0.0.1
 
     steps:
     - uses: actions/checkout@v2
