--- a/containers/dockerfile_gpu
+++ b/containers/dockerfile_gpu
@@ -41,6 +41,8 @@ RUN conda env create -f environment.yml && \
 # hoomd
 
 ENV HOOMD_TAG=v2.9.3
+ENV DEBIAN_FRONTEND=noninteractive
+ENV TZ=Etc/UTC
 
 RUN . ~/.bashrc && \
     apt update && apt install -y --no-install-recommends git cmake && \
