--- a/containers/dockerfile_gpu
+++ b/containers/dockerfile_gpu
@@ -44,14 +44,13 @@ ENV HOOMD_TAG=v2.9.3
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Etc/UTC
 
-RUN . ~/.bashrc && \
-    apt update && apt install -y --no-install-recommends git cmake && \
+RUN apt update && apt install -y --no-install-recommends git cmake && \
     apt clean && \
     rm -rf /var/lib/apt/lists/* && \
-    pip --no-cache-dir install numpy && \
     git clone --recursive https://github.com/glotzerlab/hoomd-blue.git && \
     cd hoomd-blue && \
     git checkout $HOOMD_TAG && \
+    git submodule update && \
     mkdir build && \
     cd build && \
     cmake ../ -DENABLE_MPI=OFF \
@@ -71,9 +70,9 @@ RUN . ~/.bashrc && \
     make install
 
 # mount points for filesystems on clusters
-RUN mkdir -p /nfs \
-    mkdir -p /oasis \
-    mkdir -p /scratch \
-    mkdir -p /work \
-    mkdir -p /projects \
+RUN mkdir -p /nfs && \
+    mkdir -p /oasis && \
+    mkdir -p /scratch && \
+    mkdir -p /work && \
+    mkdir -p /projects && \
     mkdir -p /home1
