--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -23,3 +23,4 @@ dependencies:
     - pytest
     - pytest-cov
     - git+https://bitbucket.org/cmelab/cme_utils.git
+    - "--editable=git+https://github.com/rsdefever/GAFF-foyer.git#egg=gaff_foyer-master"
