install git to container

--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -4,6 +4,9 @@ WORKDIR /opt/app
 
 COPY environment.yml ./
 
+RUN apk update && apk upgrade && \
+    apk add --no-cache git
+
 RUN conda env create -f environment.yml && \
     conda clean --all --yes
 
