--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -11,3 +11,5 @@ RUN conda env create -f environment.yml && \
     conda clean --all --yes
 
 SHELL ["conda", "run", "-n", "planckton", "/bin/ash", "-c"]
+ENV PATH /opt/conda/envs/planckton/bin:$PATH
+ENV CONDA_DEFAULT_ENV $conda_env
