--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -5,7 +5,7 @@ WORKDIR /opt/app
 COPY environment.yml ./
 
 RUN apk update && apk upgrade && \
-    apk add --no-cache git
+    apk add --no-cache git bash
 
 RUN conda env create -f environment.yml && \
     conda clean --all --yes
