add curl for codecov

--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -8,5 +8,8 @@ COPY environment.yml ./
 RUN conda env create -f environment.yml && \
     conda clean --all --yes
 
+# Install curl for Codecov
+RUN apt-get update && apt-get upgrade -y && apt-get install -y curl
+
 # Prepend the environment's installation of conda to the PATH
 ENV PATH /opt/conda/envs/planckton/bin:$PATH
