--- a/environment.yml
+++ b/environment.yml
@@ -12,8 +12,9 @@ dependencies:
   - pip=20.2
   - python=3.7
   - signac=1.6.0
+  - signac-flow=0.11.0
   - unyt=2.8.0
   - pip:
     - pytest
     - pytest-cov
-    - git+https://github.com/cmelab/planckton@1.5.0
+    - git+https://github.com/cmelab/planckton@0.1.5
