only rebuild when environment or dockerfile changes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,10 @@ name: CI
 on:
   push:
     branches: [ master ]
+    # Run when container or environment is changed
+    paths:
+        - 'containers/*'
+        - 'environment.yml'
 
 jobs:
   build:
