--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
  
     - name: Run pytest with coverage report
-      run: conda run -n planckton python -m pytest --cov=./ --cov-report=xml -v
+      run: python -m pytest --cov=./ --cov-report=xml -v
           
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
