trigger build ci on pull request

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,14 @@
-
 name: CI
 
 on:
   push:
     branches: [ master ]
     # Run when container or environment is changed
+    paths:
+        - 'containers/*'
+        - 'environment.yml'
+  pull_request:
+    branches: [ master ]
     paths:
         - 'containers/*'
         - 'environment.yml'
