should probably make a build action for each dockerfile

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
     branches: [ master ]
     paths:
-        - 'containers/*'
+        - 'containers/dockerfile_cpu'
         - 'environment.yml'
 
 jobs:
