only run when code is changed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,16 @@
-
 name: test
 
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'planckton/*'
+      - 'tests/*'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'planckton/*'
+      - 'tests/*'
 
 jobs:
   test:
