switch version to latest

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container: 
-        image: cmelab/planckton_cpu:0.1.5
+        image: cmelab/planckton_cpu:latest
 
     steps:
     - uses: actions/checkout@v2
