--- a/.github/workflows/build_cpu.yml
+++ b/.github/workflows/build_cpu.yml
@@ -1,11 +1,11 @@
-name: build
+name: build_cpu
 
 on:
   push:
     branches: [ master ]
     # Run when container or environment is changed
     paths:
-        - 'containers/*'
+        - 'containers/dockerfile_cpu'
         - 'environment.yml'
   pull_request:
     branches: [ master ]
@@ -14,7 +14,7 @@ on:
         - 'environment.yml'
 
 jobs:
-  build:
+  build_cpu:
     runs-on: ubuntu-latest
 
     steps:
