--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: test
+name: pytest
 
 on:
   push:
@@ -13,7 +13,7 @@ on:
       - 'tests/*'
 
 jobs:
-  test:
+  pytest:
     runs-on: ubuntu-latest
     container: 
         image: cmelab/planckton_cpu:latest
