--- a/containers/dockerfile_gpu
+++ b/containers/dockerfile_gpu
@@ -2,6 +2,36 @@ FROM continuumio/miniconda3:4.9.2
 
 WORKDIR /opt/app
 
+# Install curl for Codecov, cmake, libtbb
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ca-certificates cmake curl gnupg2 libtbb-dev && \
+    curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/7fa2af80.pub | apt-key add - && \
+    echo "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64 /" > /etc/apt/sources.list.d/cuda.list && \
+    echo "deb https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64 /" > /etc/apt/sources.list.d/nvidia-ml.list && \
+    apt clean && \
+    rm -rf /var/lib/apt/lists/*
+
+ENV CUDA_VERSION 11.2.0
+
+# For libraries in the cuda-compat-* package: https://docs.nvidia.com/cuda/eula/index.html#attachment-a
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    cuda-cudart-11-2=11.2.72-1 \
+    cuda-compat-11-2 \
+    && ln -s cuda-11.2 /usr/local/cuda && \
+    rm -rf /var/lib/apt/lists/*
+
+# Required for nvidia-docker v1
+RUN echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf \
+    && echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf
+
+ENV PATH /usr/local/nvidia/bin:/usr/local/cuda/bin:${PATH}
+ENV LD_LIBRARY_PATH /usr/local/nvidia/lib:/usr/local/nvidia/lib64
+
+# nvidia-container-runtime
+ENV NVIDIA_VISIBLE_DEVICES all
+ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
+ENV NVIDIA_REQUIRE_CUDA "cuda>=11.2 brand=tesla,driver>=418,driver<419 brand=tesla,driver>=440,driver<441 driver>=450,driver<451"
+
 # Make RUN commands use `bash --login`: -- fixes conda init
 # https://pythonspeed.com/articles/activate-conda-dockerfile/
 SHELL ["/bin/bash", "--login", "-c"]
@@ -13,11 +43,6 @@ COPY environment.yml ./
 RUN conda env update -n base -f environment.yml && \
     conda clean --all --yes -f 
 
-# Install curl for Codecov, CUDA, git, cmake, libtbb
-RUN apt-get update && apt-get upgrade -y && \
-    apt-get install -y --no-install-recommends cmake curl nvidia-cuda-toolkit libtbb-dev && \
-    apt clean && \
-    rm -rf /var/lib/apt/lists/*
 
 # Prevent python from loading packages from outside the container
 # default empty pythonpath
