add gcc and g++

--- a/containers/dockerfile_gpu
+++ b/containers/dockerfile_gpu
@@ -4,7 +4,7 @@ WORKDIR /opt/app
 
 # Install curl for Codecov, cmake, libtbb
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    ca-certificates cmake curl gnupg2 libtbb-dev && \
+    ca-certificates cmake curl gcc g++ gnupg2 libtbb-dev && \
     curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/7fa2af80.pub | apt-key add - && \
     echo "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64 /" > /etc/apt/sources.list.d/cuda.list && \
     echo "deb https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64 /" > /etc/apt/sources.list.d/nvidia-ml.list && \
