--- a/.github/workflows/build_cpu.yml
+++ b/.github/workflows/build_cpu.yml
@@ -12,6 +12,8 @@ on:
     paths:
         - 'containers/dockerfile_cpu'
         - 'environment.yml'
+  # Allows workflow to be manually triggered
+  workflow_dispatch:
 
 jobs:
   build_cpu:
