--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -11,6 +11,7 @@ COPY environment.yml ./
 
 # Install in base environment
 RUN conda env update -n base -f environment.yml && \
+    python -m pip install git+https://github.com/jennyfothergill/mbuild.git@feat/hoomd_restart
     conda clean --all --yes -f 
 
 # Install curl for Codecov
