--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -30,4 +30,15 @@ jobs:
         with:
           python-version: 3.7
       - uses: jamescurtin/isort-action@master
+  pydocstyle:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+        run: |
+            python -m pip install pydocstyle \
+            pydocstyle planckton --convention=numpy
+
 
