--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
-        run: |
+      - run: |
             python -m pip install pydocstyle \
             pydocstyle planckton --convention=numpy
 
