--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           python-version: 3.7
       - run: |
-            python -m pip install pydocstyle \
+            python -m pip install pydocstyle && \
             pydocstyle planckton --convention=numpy
 
 
