--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - foyer=0.7.7
   - gsd=2.2.0
   - hoomd=2.9.3
-  - mdtraj=1.9.5 # 
+  - mdtraj=1.9.5 #
   #- mbuild=0.10.12
   - numpy=1.19
   - openbabel=3.1.1
@@ -15,6 +15,7 @@ dependencies:
   - oset=0.1.3 #
   - packmol=20 #
   - pip=20.2
+  - pre-commit
   - pytest
   - pytest-cov
   - python=3.7
