--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,9 @@ repos:
   hooks:
     - id: isort
       name: isort (python)
+- repo: https://github.com/pycqa/pydocstyle
+  rev: '5.1.1'
+  hooks:
+    - id: pydocstyle
+      exclude: ^(planckton/tests/|planckton/compounds/|planckton/forcefields/|setup.py)
+      args: [--convention=numpy]
