--- a/environment.yml
+++ b/environment.yml
@@ -26,4 +26,4 @@ dependencies:
   - pip:
     - git+https://github.com/mosdef-hub/mbuild
     - git+https://github.com/rsdefever/antefoyer.git
-    - git+https://github.com/cmelab/planckton@0.4.0
+    - git+https://github.com/cmelab/planckton@v0.4.0
