changing tests will trigger workflow

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ master ]
     paths:
-      - 'planckton/*'
+      - 'planckton/**'
   pull_request:
     branches: [ master ]
     paths:
-      - 'planckton/*'
+      - 'planckton/**'
 
 jobs:
   pytest:
