--- a/environment-nohoomd.yml
+++ b/environment-nohoomd.yml
@@ -2,8 +2,9 @@ name: planckton
 channels:
   - conda-forge
 dependencies:
-  - ele=0.1.0
+  - ele=0.2.0
   - foyer=0.9.1
+  - gmso=0.6.0
   - gsd=2.4.2
   - mbuild=0.11.0
   - numpy=1.20
