--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -1,6 +1,6 @@
 FROM mambaorg/micromamba:0.15.2
 
-COPY --chown=micromamba:micromamba env.yaml /tmp/env.yaml
+COPY --chown=micromamba:micromamba environment.yaml /tmp/env.yaml
 RUN micromamba install -y -n base -f /tmp/env.yaml && \
     micromamba clean --all --yes
 
