--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -1,7 +1,7 @@
 FROM mambaorg/micromamba:0.15.2
 
-COPY --chown=micromamba:micromamba environment.yaml /tmp/env.yaml
-RUN micromamba install -y -n base -f /tmp/env.yaml && \
+COPY --chown=micromamba:micromamba environment.yml /tmp/env.yml
+RUN micromamba install -y -n base -f /tmp/env.yml && \
     micromamba clean --all --yes
 
 # Install curl for Codecov
