--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -3,6 +3,8 @@ FROM mambaorg/micromamba:0.15.2
 COPY --chown=micromamba:micromamba environment.yml /tmp/env.yml
 RUN micromamba install -y -n base -f /tmp/env.yml && \
     micromamba clean --all --yes
+    
+USER root
 
 # Install curl for Codecov
-RUN apt-get update && apt-get upgrade -y && apt-get install -y curl
+RUN sudo apt-get update && sudo apt-get upgrade -y && apt-get install -y curl
