--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,25 +4,42 @@ on:
   push:
     branches: [ master ]
     paths:
+      - '.github/workflows/pytest.yml'
       - 'planckton/**'
   pull_request:
     branches: [ master ]
     paths:
+      - '.github/workflows/pytest.yml'
       - 'planckton/**'
+  # Allows workflow to be manually triggered
+  workflow_dispatch:
 
 jobs:
   pytest:
     runs-on: ubuntu-latest
-    container:
-        image: cmelab/planckton_cpu:latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Check out repository
+      uses: actions/checkout@v2
+
+    - name: Build environment
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        environment-file: environment.yml
+        miniforge-variant: Mambaforge
+        miniforge-version: 4.9.2-4
+        use-mamba: true
+
+    - name: Install package
+      shell: bash -l {0}
+      run: pip install .
 
     - name: Run pytest with coverage report
+      shell: bash -l {0}
       run: python -m pytest --cov=./ --cov-report=xml -v
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
