--- a/containers/dockerfile_cpu
+++ b/containers/dockerfile_cpu
@@ -1,10 +1,13 @@
 FROM mambaorg/micromamba:0.15.2
 
-COPY --chown=micromamba:micromamba environment.yml /tmp/env.yml
-RUN micromamba install -y -n base -f /tmp/env.yml && \
-    micromamba clean --all --yes
-
 USER root
 
-# Install curl for Codecov
-RUN apt-get update && apt-get upgrade -y && apt-get install -y curl
+ADD . /planckton
+
+WORKDIR /planckton
+
+RUN micromamba install -y -n base -f environment.yml && \
+    micromamba clean --all --yes && \
+    python setup.py install
+
+WORKDIR /home
