--- a/.github/workflows/build_cpu.yml
+++ b/.github/workflows/build_cpu.yml
@@ -7,6 +7,7 @@ on:
     paths:
         - 'containers/dockerfile_cpu'
         - 'environment.yml'
+        - 'planckton/**'
   # Allows workflow to be manually triggered
   workflow_dispatch:
 
