--- a/.github/workflows/build_gpu.yml
+++ b/.github/workflows/build_gpu.yml
@@ -7,6 +7,7 @@ on:
     paths:
         - 'containers/dockerfile_gpu'
         - 'environment-nohoomd.yml'
+        - 'planckton/**'
   # Allows workflow to be manually triggered
   workflow_dispatch:
 
