--- a/environment-nohoomd.yml
+++ b/environment-nohoomd.yml
@@ -3,22 +3,22 @@ channels:
   - conda-forge
 dependencies:
   - ele=0.2.0
-  - foyer=0.9.4
+  - foyer=0.11.1
   - git
-  - gmso=0.6.0
-  - gsd=2.4.2
-  - mbuild=0.13.0
-  - numpy=1.21
+  - gmso=0.8.1
+  - gsd=2.5.3
+  - mbuild=0.15.0
+  - numpy=1.23.1
   - openbabel=3.1.1
-  - openmm>=7.6
-  - pip=20.2
+  - openmm=7.7.0
+  - pip=22.2.2
   - pre-commit
   - pytest
   - pytest-cov
-  - python=3.7
+  - python=3.10.5
   - rdkit
   - signac=1.7.0
-  - signac-flow=0.14.0
+  - signac-flow=0.20.0
   - unyt=2.8.0
   - pip:
     - git+https://github.com/rsdefever/antefoyer.git
